jump fix

--- a/design/common.blocks/input/_type/input_type_link.styl
+++ b/design/common.blocks/input/_type/input_type_link.styl
@@ -20,7 +20,7 @@
         .input__box
         {
             height:        control_size_s;
-
+            line-height:   control_size_s;
             padding-left:  inputs_padding_s;
             padding-right: inputs_padding_s;
         }
@@ -31,7 +31,7 @@
         .input__box
         {
             height:        control_size_m;
-
+            line-height:   control_size_m;
             padding-left:  inputs_padding_m;
             padding-right: inputs_padding_m;
         }
@@ -42,7 +42,7 @@
         .input__box
         {
             height:        control_size_l;
-
+            line-height:   control_size_l;
             padding-left:  inputs_padding_l;
             padding-right: inputs_padding_l;
         }
@@ -53,7 +53,7 @@
         .input__box
         {
             height:        control_size_xl;
-
+            line-height:   control_size_xl;
             padding-left:  inputs_padding_xl;
             padding-right: inputs_padding_xl;
         }
